[package]
name = "wlx-overlay-x"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wlx-overlay-x"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashpd = "0.4.0"
glam = { version = "0.23.0", features = ["approx"] }
gles31 = "1.0.1"
libspa-sys = "0.6.0"
once_cell = "1.18.0"
pipewire = { version = "0.6.0", features = ["v0_3_33"] }
smithay-client-toolkit = "0.17.0"
wayland-client = "0.30.2"
wayland-protocols = { version = "0.30.1", features = ["wayland-client", "client", "staging", "unstable"] }
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "signal", "full"] }
async-std = { version = "1.12.0", features = ["attributes"] }
libloading = "0.8.0"
libc = "0.2.147"
input-linux = "0.6.0"
log = { version = "0.4.19", features = ["std"] }
env_logger = "0.10.0"
idmap = "0.2.21"
freetype-rs = "0.32.0"
idmap-derive = "0.1.2"
serde = { version = "1.0.183", features = ["derive"] }
regex = "1.9.3"
strum = { version = "0.25.0", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.105"
fontconfig-rs = { version = "0.1.1", features = ["dlopen"] }
rodio = { version = "0.17.1", default-features = false, features = ["wav", "hound"] }
chrono = "0.4.26"
xdg = "2.5.2"

[dependencies.stereokit]
default-features = false
features = ["linux-egl"]
version = "0.16.9"

